# tracking_athletes

./: .gitignore  CMakeLists.txt  README.md  app.cpp  old_detector.cpp  test.cpp
include/: Box.h  Detector.h  Reid.h  Track.h  Tracker.h  TvmDetector.h
models/dev_models/: pd.cfg  pd_tinier4.cfg  pd_tiny3.cfg  pd_tiny4.cfg  pd_tiny4_tennis.cfg
python/: convert_darknet.py  convert_pytorch.py  infer_pytorch.py  reid_test.py  simple.py
src/: Box.cpp  Detector.cpp  Reid.cpp  Track.cpp  Tracker.cpp  TvmDetector.cpp
tests/: app_test.cpp  opencv_detector_test.cpp  reid_test copy.cpp  reid_test.cpp  tvm_detector_test.cpp
